--- a/SRteacher/RP-bookList-teaching.html
+++ b/SRteacher/RP-bookList-teaching.html
@@ -344,8 +344,8 @@
             <!-- 搜尋結果 end  --> 
             <!-- 按鈕 start -->
             <div class="text-center py-3">
-              <button type="button" class="btn btn-outline-primary m-1" id="ndecreaseCancel" data-bs-dismiss="modal">取消</button>
-              <button type="button" class="btn btn-primary m-1" id="ndecreaseOk">確定設定</button>
+              <button type="button" class="btn btn-outline-primary m-1" id="adjustBookCancel" data-bs-dismiss="modal">取消</button>
+              <button type="button" class="btn btn-primary m-1" id="adjustBookConfirm">確定設定</button>
             </div>
             <!-- 按鈕 end  --> 
           </div>
@@ -353,7 +353,7 @@
       </div>
     </div>
   </div>
-  <!-- Modal#indecreaseModal 增/減書籍  end  --> 
+  <!-- Modal#adjustBookModal 增/減書籍  end  --> 
   
   <!-- Modal#assignModal 指派班級 start -->
   <div class="modal fade" id="assignModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="assignModalLabel" aria-hidden="true">
