--- a/SRteacher/RP-skill-performance.html
+++ b/SRteacher/RP-skill-performance.html
@@ -483,7 +483,7 @@ $(document).ready(function () {
       loadStudentRATable();
       return;
     } else {
-      alertModal('<div class="text-red">請確實選擇班級資料！</div>');
+      alertModal('<div class="text-red">請確實選擇班級學生資料！</div>');
     }
   });
 	
